err/iti1480a-linux.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ITI1480A_linux-3.0.egg-info'...
Listing './lib/python3.5/site-packages/iti1480a'...
Compiling './lib/python3.5/site-packages/iti1480a/capture.py'...
***   File "./lib/python3.5/site-packages/iti1480a/capture.py", line 376
    except IOError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iti1480a/display.py'...
***   File "./lib/python3.5/site-packages/iti1480a/display.py", line 332
    except IOError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iti1480a/dump_pipe.py'...
***   File "./lib/python3.5/site-packages/iti1480a/dump_pipe.py", line 150
    except IOError, exc:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/iti1480a/spt2hex.py'...
***   File "./lib/python3.5/site-packages/iti1480a/spt2hex.py", line 144
    print 'Usage: %s <file.spt>\n  Result: <file_0.ihx> [<file_1.ihx> ' \
                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/libusb1-1.6.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/usb1'...
Listing './share'...
Listing './share/python-wheels'...
